[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "hquant"
readme = "README.md"
requires-python = ">=3.8"
license = { file="LICENSE" }
authors = [
	{ name="Marcos Del Sol Vives", email="marcos@orca.pet" },
]
keywords = ["image", "dither", "dithering", "quantization", "palette"]
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]
dependencies = [
    "Pillow >=9.0.0",
]
dynamic = ["version", "description"]

[project.urls]
Homepage = "https://github.com/socram8888/hquant"
Issues = "https://github.com/socram8888/hquant/issues"
